# payapi-app

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  proxy_mode.rs  settings.rs  wallet.rs
src-tauri/src/proxy/: hook.rs  mod.rs  payment.rs  server.rs  sse.rs
src-tauri/src/proxy_mode/: claude.rs  claude_desktop.rs  codex.rs  gemini.rs  mod.rs  util.rs
src-tauri/src/store/: db.rs  mod.rs
src-tauri/src/wallet/: balance.rs  manager.rs  mod.rs  signer.rs
src/components/: ActivityGraph.tsx  LiquidFrame.tsx  OverviewTab.tsx  ProxyModeTab.tsx  SettingsPanel.tsx  SpendingChart.tsx  WalletPanel.tsx
src/hooks/: useWallet.ts
src/lib/: api.ts  error.ts  payrecord.ts
